--- a/arc-method/index.html
+++ b/arc-method/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Force Directed Graph</title>
+<title>API Method Arc Diagram</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
 <script type="module">
 
-// import define from "./index.js";
-// import {Runtime, Library, Inspector} from "./runtime.js";
-import {Runtime, Inspector} from "@observablehq/runtime";
-import define from "@d3/force-directed-graph";
+import define from "./index.js";
+import {Runtime, Library, Inspector} from "./runtime.js";
 
-// const runtime = new Runtime();
-// const main = runtime.module(define, Inspector.into(document.body));
 const runtime = new Runtime();
-const main = runtime.module(define);
-main.value("foo").then(value => console.log(value));
+const main = runtime.module(define, Inspector.into(document.body));
+
 </script>
