--- a/praxis-openapi-editor/dev-helpers/index.html
+++ b/praxis-openapi-editor/dev-helpers/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Swagger Editor</title>
+  <title>Praxis Editor</title>
   <style>
   * {
     box-sizing: border-box;
